--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-RUNNER=distribute
+RUNNER=parallel
 APPIUM_JS_PATH=/usr/local/lib/node_modules/appium/build/lib/main.js
 BROWSER_TYPE=chrome
 APP_TYPE=NA
