--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.github.AppiumTestDistribution</groupId>
             <artifactId>AppiumTestDistribution</artifactId>
-            <version>fix-533-SNAPSHOT</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -35,11 +35,17 @@
 
     </dependencies>
     <build>
+    <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
+                <configuration>
+   					<forkCount>3</forkCount>
+    				<reuseForks>true</reuseForks>
+    				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+  				</configuration>
             </plugin>
             <plugin>
                 <groupId>com.github.temyers</groupId>
@@ -86,6 +92,7 @@
                 </configuration>
             </plugin>
         </plugins>
+       </pluginManagement>
     </build>
 </project>
 
